--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,5 +19,22 @@
           </div>
         </article>
 
+<div id="disqus_thread"></div>
+<script>
 
+
+var disqus_config = function () {
+this.page.url = '{{ self.request.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = '{{ self.request.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.title = '{{ object.title }}'
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://t3trabl0g-herokuapp-com.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endblock content %}
