--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,30 +54,28 @@
 <div class="alert alert-{{ message.tags }}">{{ message }}</div>
           {%  endfor %}
           {% endif %}
-          
           {% block content %}{% endblock %}
-          
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <h3>Guide Categories</h3>
+            <p class='text-muted'>Below you will find material that I have prepared on a variety of topics that I find interesting.
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-">Arch Linux</li>
+                <li class="list-group-item list-group-item">Visualization</li>
+                <li class="list-group-item list-group-item">Python - Django</li>
+                <li class="list-group-item list-group-item">Unity - UE4</li>
               </ul>
             </p>
           </div>
         </div>
       </div>
     </main>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script id="dsq-count-scr" src="//t3trabl0g-herokuapp-com.disqus.com/count.js" async></script>
 </body>
 </html>
