modified:   blog/templates/blog/base.html 	modified:   blog/templates/blog/user_posts.html

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -60,8 +60,8 @@
           <div class="content-section">
             <h3>Guide Categories</h3>
             <p class='text-muted'>Below you will find material that I have prepared on a variety of topics that I find interesting.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-">Arch Linux</li>
+              <a class="list-group">
+              <li class="list-group-item list-group-item-" ><a href="/user/Arch_Linux">Arch Linux</a></li>
                 <li class="list-group-item list-group-item">Visualization</li>
                 <li class="list-group-item list-group-item">Python - Django</li>
                 <li class="list-group-item list-group-item">Unity - UE4</li>
