--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,7 +1,7 @@
 
 {% extends "blog/base.html" %}
 {% block content %}
-    <h2 class="mb-3">Posts by {{  view.kwargs.username }}({{ page_obj.paginator.count }})</h2>
+    <h2 class="mb-3">Guides for {{  view.kwargs.username }}({{ page_obj.paginator.count }})</h2>
     {% for post in posts %}
         <article class="media content-section">
           <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
