modified:   blog/templates/blog/base.html 	modified:   blog/templates/blog/home.html 	modified:   blog/templates/blog/post_detail.html

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -30,7 +30,7 @@ this.page.title = '{{ object.title }}'
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://t3trabl0g-herokuapp-com.disqus.com/embed.js';
+s.src = 'https://t3ksp0t-me.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
