--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -45,7 +45,7 @@ this.page.title = '{{ self.request.title }}'
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://t3trabl0g-herokuapp-com.disqus.com/embed.js';
+s.src = 'https://t3ksp0t-me.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
